Implementacion vista: citas, chat y medicos

--- a/cita_doc/src/app/privado/agendar/agendar.page.html
+++ b/cita_doc/src/app/privado/agendar/agendar.page.html
@@ -7,7 +7,7 @@
     <ion-title class="ion-text-center">Agendar</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button fill="clear">
+      <ion-button (click)="verNotificaciones()"fill="clear">
         <ion-icon name="notifications-outline"></ion-icon>
         <ion-badge>2</ion-badge>
       </ion-button>
@@ -17,5 +17,12 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-slide>
+    <ion-text >
+      <img src="../../../assets/images/logo.png"> 
+      <h1>Dory</h1>
+      <p>Se encarga de agendar tus citas en el horario de tu elección</p>
+      <ion-button (click)="start()" fill="outline" >Iniciar</ion-button>
+    </ion-text>
+  </ion-slide>
 </ion-content>
