--- a/cita_doc/src/app/privado/perfil/perfil.page.html
+++ b/cita_doc/src/app/privado/perfil/perfil.page.html
@@ -13,6 +13,12 @@
       </ion-button>
     </ion-buttons>
 
+    <ion-buttons slot="start">
+      <ion-button fill="clear">
+        <ion-icon name="chevron-back-sharp"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
