--- a/cita_doc/src/app/privado/agendar/agendar.page.html
+++ b/cita_doc/src/app/privado/agendar/agendar.page.html
@@ -22,7 +22,7 @@
       <img src="../../../assets/images/logo.png"> 
       <h1>Dory</h1>
       <p>Se encarga de agendar tus citas en el horario de tu elección</p>
-      <ion-button (click)="start()" fill="outline" >Iniciar</ion-button>
+      <ion-button (click)="start()" fill="outline" >Agendar</ion-button>
     </ion-text>
   </ion-slide>
 </ion-content>
