--- a/cita_doc/src/app/privado/doctores/doctores.page.html
+++ b/cita_doc/src/app/privado/doctores/doctores.page.html
@@ -16,24 +16,23 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
 
-  <!-- <ion-grid no-padding class="home-gallery">
-    <ion-row class="ion-text-center">
-      <ion-col  *ngFor="let doctor of medicos "> 
-        <div class="products_list">
-            <div  class="products_list_img">
-                <img style="height: 200px; width: 400px;" src="../../../assets/images/doctorPerfil.png" (click)="verDoctor(doctor)" />
-                <b><p (click)="verDoctor(doctor)">{{doctor.nombres}}</p><p>{{doctor.apellidos}}</p></b>
-            </div>    
-        </div>
-    </ion-col>
-    </ion-row>
-  </ion-grid> -->
+<ion-item>
+  <ion-label>Clinicas</ion-label>
+  <ion-select class="custom-options" [(ngModel)]="idClinica" interface="popover">
+    <ion-select-option [value]="0">Todas</ion-select-option>
+    <ion-select-option *ngFor="let clinica of clinicas" [value]="clinica.clinicaId">{{clinica.nombreClinica}}</ion-select-option>
 
+  </ion-select>
+</ion-item>
+
+
+  <ion-button (click)="listarDoctoresClinica()" shape="round">Filtrar</ion-button>
+  <ion-searchbar placeholder="Buscar..." [(ngModel)]="filterTerm" name="filterTerm" animated="true"></ion-searchbar>
     <ion-grid no-padding class="home-gallery">
     <ion-row class="ion-text-center">
-      <ion-col  size="6" *ngFor="let doctor of medicos "> 
+      <ion-col  size="6" *ngFor="let doctor of medicos  | filter:filterTerm"> 
         <ion-card>   
           <img src="../../../assets/images/doctorPerfil.png">
           <div class="card-title">{{doctor.nombres}} {{doctor.apellidos}}</div>
@@ -42,17 +41,5 @@
     </ion-col>
     </ion-row>
   </ion-grid> 
-
-    <!-- <ion-grid *ngFor ="let doctor of medicos">
-    <ion-row>
-      <ion-col size="6" *ngFor="let item of doctor?.medicos">
-        <ion-card>   
-          <img src="../../../assets/images/doctorPerfil.png">
-          <div class="card-title">{{item?.nombres}} {{item?.apellidos}}</div>
-          <div>{{ item?.descripcion }}</div>  
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>  -->
 
 </ion-content>
