--- a/cita_doc/src/app/privado/citas/citas.page.html
+++ b/cita_doc/src/app/privado/citas/citas.page.html
@@ -19,21 +19,20 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row *ngFor="let cita of citas">
-      <ion-col class="message other-message">
-        <span>Fecha: </span>
-        <span>{{cita.fecha}}</span>
-        <br>
-        <span>Medico: </span>
-        <span>{{cita.medico}}</span>
-        <br>
-        <span>Clinica: </span>
-        <span>{{cita.clinica}}</span>
-      </ion-col>
-    </ion-row>
-    <br>
+ 
+      <ion-list>
+        <ion-item *ngFor="let cita of citas"  (click)="verCita(cita.citaId)">
+          <ion-avatar slot="start">
+            <img style="height: 40px; width: 40px;" src="../../../assets/images/logoCita.png"/>
+          </ion-avatar>
+          <ion-label>
+            <h2> Clinica {{cita.clinica}}</h2>
+            <p>{{cita.fechaCita}}</p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
 
-  </ion-grid>
+
+
 
 </ion-content>
