--- a/cita_doc/src/app/privado/chat/chat.page.html
+++ b/cita_doc/src/app/privado/chat/chat.page.html
@@ -5,7 +5,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title class="ion-text-center">Chat con Dory</ion-title>
+    <ion-title class="ion-text-center">Licenciada Dory</ion-title>
 
     <ion-buttons slot="start">
       <ion-button (click)="volver()" fill="clear">
