--- a/cita_doc/src/app/privado/citas/citas.page.scss
+++ b/cita_doc/src/app/privado/citas/citas.page.scss
@@ -1,11 +1,24 @@
 .message{
     padding: 10px;
     border-radius: 10px;
-    margin-bottom: 4px;
+    margin-bottom: 3px;
     white-space: pre-wrap;
 }
 
 .other-message{
     background: rgb(2, 105, 2);
     color: #fff
+}
+
+.cita{
+    background: rgb(2, 105, 2);
+    color: #fff
+}
+
+.contenido{
+    color: white;
+}
+
+ion-icon {
+    font-size: 20px; //Preferred size here
 }
