--- a/cita_doc/src/app/privado/detalles/det-cirugia/det-cirugia.page.html
+++ b/cita_doc/src/app/privado/detalles/det-cirugia/det-cirugia.page.html
@@ -1,9 +1,63 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>det_cirugia</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+
+    <ion-title class="ion-text-center">Detalle cirugía</ion-title>
+
+    <ion-buttons slot="start">
+      <ion-button (click)="volver()" fill="clear">
+        <ion-icon name="chevron-back-sharp"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+<ion-content fullscreen>
+  <form #form="ngForm">
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
+
+
+      <ion-item>
+        <ion-label>Tipo </ion-label>
+        <ion-select [(ngModel)]="pacienteCirugia.tipo" name="tipoPC" class="custom-options" interface="popover">
+          <ion-select-option [value]="cirugia_mayor">cirugía mayor</ion-select-option>
+          <ion-select-option [value]="cirugia_menor">cirugía menor</ion-select-option>
+
+        </ion-select>
+      </ion-item>
+
+      <ion-item>
+        <ion-item button="true" id="open-date-input">
+          <ion-label>Fecha de cirugía</ion-label>
+          <ion-text slot="end">{{ pacienteCirugia.fechaProcedimiento }}</ion-text>
+          <ion-popover trigger="open-date-input" show-backdrop="false">
+            <ng-template>
+              <ion-datetime
+                #popoverDatetime
+                presentation="date"
+                (ionChange)="pacienteCirugia.fechaProcedimiento = formatDate(popoverDatetime.value)"
+              ></ion-datetime>
+            </ng-template>
+          </ion-popover>
+        </ion-item>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Descripción cirugía <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-textarea rows="6" cols="20"  [(ngModel)]="cirugia.descripcion" name="descripcion" ngModel required placeholder="Describa la enfermedad..."></ion-textarea>
+      </ion-item> 
+
+    </ion-list>
+
+    <div class="ion-padding">
+      <ion-button [disabled]="form.invalid" expand="block" type="submit" (click)="updateCirugiaP()" class="ion-no-margin">Actualizar cirugía</ion-button>
+    </div>
+  </form>
 </ion-content>
