--- a/cita_doc/src/app/privado/perfil/perfil.page.html
+++ b/cita_doc/src/app/privado/perfil/perfil.page.html
@@ -11,22 +11,41 @@
         <ion-icon name="notifications-outline"></ion-icon>
         <ion-badge>2</ion-badge>
       </ion-button>
-    </ion-buttons>
 
-    <ion-buttons slot="start">
-      <ion-button fill="clear">
-        <ion-icon name="chevron-back-sharp"></ion-icon>
+      <ion-button  id="nested-button" fill="clear">
+        <ion-icon name="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
 
   </ion-toolbar>
+
+  <!-- Use a trigger -->
+
+  <ion-popover trigger="nested-button" [dismissOnSelect]="true">
+    <ng-template>
+      <ion-content>
+        <ion-list>
+          <ion-item [button]="true" [detail]="false">
+            <ion-label>Acerca </ion-label>
+          </ion-item>
+          <ion-item (click)="presentAlertConfirm()" [button]="true" [detail]="false">
+            <ion-label>Cerrar sesión</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-popover>
+
+
 </ion-header>
 
 <ion-content fullscreen>
   <ion-card>
     <ion-row>
       <ion-col>
-        <center><img class="imgC" style="height: 100px; width: 100px;" src="../../../assets/images/perfil.png" />
+        <center><img *ngIf="paciente.genero==='Masculino'" class="imgC" style="height: 100px; width: 100px;" src="../../../assets/images/men.jpg" />
+        </center>
+        <center><img *ngIf="paciente.genero==='Femenino'" class="imgC" style="height: 100px; width: 100px;" src="../../../assets/images/woman.jpg" />
         </center>
 
 
@@ -56,12 +75,19 @@
         <ion-card>
           <p>Direcciones</p>
           <ion-col *ngIf="tamdirecciones !== 0">
-            <ion-row *ngFor="let direccion of paciente.direccionPacientes">
-              <p>Pais: {{direccion.pais}}</p>
-              <p>Provincia: {{direccion.provincia}}</p>
-              <p>Calle principal: {{direccion.callePrincipal}}</p>
-              <p>Calle secundaria: {{direccion.calleSecundaria}}</p>
-            </ion-row>
+
+            <ion-list>
+              <ion-item *ngFor="let direccion of paciente.direccionPacientes">
+                <ion-label >
+                  <p>Tipo: {{direccion.tipo}}</p>
+                  <p>Pais: {{direccion.direccion.pais}}</p>
+                  <p>Provincia: {{direccion.direccion.provincia}}</p>
+                  <p>Calle principal: {{direccion.direccion.callePrincipal}}</p>
+                  <p>Calle secundaria: {{direccion.direccion.calleSecundaria}}</p>
+                </ion-label>
+              </ion-item>
+            </ion-list>
+
           </ion-col>
 
           <ion-col *ngIf="tamdirecciones === 0">
@@ -102,7 +128,7 @@
 
             <ion-list>
               <ion-item *ngFor="let cirugia of paciente.pacienteCirugias">
-                <ion-label (click)="ver(cirugia.cirugiaId)">
+                <ion-label (click)="verCirugia(cirugia.pacienteCirugiaId)">
                   <!-- <h3>Nombre:</h3> -->
                   <p>Descripcion: {{cirugia.cirugia.descripcion}}</p>
                   <!-- <h3>Tipo: </h3> -->
