--- a/cita_doc/src/app/privado/detalles/det-patologia/det-patologia.page.html
+++ b/cita_doc/src/app/privado/detalles/det-patologia/det-patologia.page.html
@@ -15,7 +15,7 @@
     
 
     <ion-buttons slot="end">
-      <ion-button (click)="borrar()" fill="clear">
+      <ion-button (click)="presentAlertConfirm()" fill="clear">
         <ion-icon style="color: red;" name="trash"></ion-icon>
       </ion-button>
     </ion-buttons>
