--- a/cita_doc/src/app/privado/detalles/det-dpersonales/det-dpersonales.page.html
+++ b/cita_doc/src/app/privado/detalles/det-dpersonales/det-dpersonales.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title class="ion-text-center">Datos personales</ion-title>
+    <ion-title class="ion-text-center">Datos Personales</ion-title>
 
     <ion-buttons slot="start">
       <ion-button (click)="volver()" fill="clear">
