--- a/cita_doc/src/app/app.component.html
+++ b/cita_doc/src/app/app.component.html
@@ -1,3 +1,9 @@
-<ion-app>
+<!-- <ion-app>
   <ion-router-outlet></ion-router-outlet>
-</ion-app>
+  <app-tab *ngIf="showTabs"></app-tab> 
+</ion-app> -->
+
+<ion-app>
+  <ion-router-outlet id="main"></ion-router-outlet>
+  <!-- <ion-tab-bar *ngIf="showTabs"></ion-tab-bar> -->
+</ion-app> 
