--- a/cita_doc/src/app/privado/detalles/det-medico/det-medico.page.html
+++ b/cita_doc/src/app/privado/detalles/det-medico/det-medico.page.html
@@ -96,7 +96,7 @@
               <ion-item *ngFor="let subespecialidad of medico.subespecialidades">
                 <ion-label >
                   <!-- <h3>Nombre:</h3> -->
-                  <p>{{subespecialidad.nombre}}</p>
+                  <p>{{subespecialidad.subespecialidad.nombre}}</p>
                 </ion-label>
               </ion-item>
             </ion-list>
