--- a/cita_doc/src/app/tabs/tabs.page.html
+++ b/cita_doc/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar id="myTabBar" slot="bottom" >
     <ion-tab-button tab="citas" >
       <img style="height: 35px; width: 35px;" src="../../assets/images/calendar.png"/>
       <ion-label>Citas</ion-label>
