--- a/cita_doc/src/app/privado/cirugia/cirugia.page.html
+++ b/cita_doc/src/app/privado/cirugia/cirugia.page.html
@@ -25,24 +25,22 @@
 
       <ion-item>
         <ion-label>Tipo </ion-label>
-        <ion-select [(ngModel)]="formularioPC.tipo" name="tipoPC" class="custom-options" interface="popover" ngModel required>
+        <ion-select [(ngModel)]="formularioPC.tipo" name="tipoPC" class="custom-options" interface="popover" ngModel
+          required>
           <ion-select-option [value]="cirugia_mayor">cirugía mayor</ion-select-option>
           <ion-select-option [value]="cirugia_menor">cirugía menor</ion-select-option>
 
         </ion-select>
       </ion-item>
-
       <ion-item>
+
         <ion-item button="true" id="open-date-input">
           <ion-label>Fecha de cirugía</ion-label>
           <ion-text slot="end">{{ cirugia.fechaProcedimiento }}</ion-text>
           <ion-popover trigger="open-date-input" show-backdrop="false">
             <ng-template>
-              <ion-datetime
-                #popoverDatetime
-                presentation="date"
-                (ionChange)="cirugia.fechaProcedimiento = formatDate(popoverDatetime.value)"
-              ></ion-datetime>
+              <ion-datetime #popoverDatetime presentation="date"
+                (ionChange)="cirugia.fechaProcedimiento = formatDate(popoverDatetime.value)"></ion-datetime>
             </ng-template>
           </ion-popover>
         </ion-item>
@@ -51,13 +49,15 @@
       <ion-item>
         <ion-label position="floating">Descripción cirugía <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-textarea rows="6" cols="20"  [(ngModel)]="cirugia.descripcion" name="descripcion" ngModel required placeholder="Describa la enfermedad..."></ion-textarea>
-      </ion-item> 
+        <ion-textarea rows="6" cols="20" [(ngModel)]="cirugia.descripcion" name="descripcion" ngModel required
+          placeholder="Describa la enfermedad..."></ion-textarea>
+      </ion-item>
 
     </ion-list>
 
     <div class="ion-padding">
-      <ion-button [disabled]="form.invalid" expand="block" type="submit" (click)="addCirugia()" class="ion-no-margin">Agregar cirugía</ion-button>
+      <ion-button [disabled]="form.invalid" expand="block" type="submit" (click)="addCirugia()" class="ion-no-margin">
+        Agregar cirugía</ion-button>
     </div>
   </form>
 </ion-content>
