--- a/cita_doc/src/app/privado/agendar/agendar.page.html
+++ b/cita_doc/src/app/privado/agendar/agendar.page.html
@@ -20,12 +20,25 @@
   <ion-slide>
     <ion-text >
       <img style="width: 60%; height: 60%;" src="../../../assets/images/dory.png"> 
-      <h3>Licenciada Dory</h3>
-      <p>Se encarga de agendar tus citas en el horario de tu elección</p>
-      <!-- <ion-button (click)="start()" fill="outline" >Agendar</ion-button> -->
-      <ion-chip (click)="start()" color="secondary">
-        <ion-label><b>Agendar</b></ion-label>
-      </ion-chip>
+
+
+      <ion-grid>
+        <ion-row>
+          <ion-col class="ion-padding">
+            <div>
+              <h3>Licenciada Dory</h3>
+              <p>Se encarga de agendar tus citas en el horario de tu elección</p>
+              <!-- <ion-button (click)="start()" fill="outline" >Agendar</ion-button> -->
+              <ion-chip (click)="start()" color="secondary">
+                <ion-label><b>Agendar</b></ion-label>
+              </ion-chip>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+
+
     </ion-text>
   </ion-slide>
 </ion-content>
