--- a/cita_doc/src/app/privado/citas/citas.page.html
+++ b/cita_doc/src/app/privado/citas/citas.page.html
@@ -19,6 +19,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <ion-refresher slot="fixed" pullFactor="0.5" pullMin="100" pullMax="200" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
  
       <ion-list>
         <ion-item *ngFor="let cita of citas"  (click)="verCita(cita.citaId)">
