--- a/cita_doc/src/app/privado/doctores/doctores.page.html
+++ b/cita_doc/src/app/privado/doctores/doctores.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -18,28 +18,34 @@
 
 <ion-content [fullscreen]="true">
 
-<ion-item>
+  <ion-item>
 
-  <ion-label>Clinicas</ion-label>
-  <ion-select class="custom-options" [(ngModel)]="filtradoC" interface="popover">
-    <ion-select-option [value]="0">Todas</ion-select-option>
-    <ion-select-option *ngFor="let clinica of clinicas" [value]="clinica.nombreClinica">{{clinica.nombreClinica}}</ion-select-option>
+    <ion-label>Clínicas</ion-label>
+    <ion-select class="custom-options" [(ngModel)]="filtradoC" interface="popover">
+      <ion-select-option [value]="0">Todas</ion-select-option>
+      <ion-select-option *ngFor="let clinica of clinicas" [value]="clinica.nombreClinica">{{clinica.nombreClinica}}
+      </ion-select-option>
 
-  </ion-select>
+    </ion-select>
 
-</ion-item>
+  </ion-item>
 
   <ion-searchbar placeholder="Buscar..." [(ngModel)]="filterTerm" name="filterTerm" animated="true"></ion-searchbar>
-    <ion-grid no-padding class="home-gallery">
+  
+  
+  <ion-refresher slot="fixed" pullFactor="0.5" pullMin="100" pullMax="200" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-grid no-padding class="home-gallery">
     <ion-row class="ion-text-center">
-      <ion-col  size="6" *ngFor="let doctor of medicos  | filter:filterTerm | filter:filtradoC"> 
-        <ion-card (click)="verMedico(doctor.usuarioId)">   
+      <ion-col size="6" *ngFor="let doctor of medicos  | filter:filterTerm | filter:filtradoC">
+        <ion-card (click)="verMedico(doctor.usuarioId)">
           <img src="../../../assets/images/doctorPerfil.png">
           <div class="card-title">{{doctor.nombre}} {{doctor.apellido}}</div>
-          <div>{{ doctor.descripcion }}</div>  
+          <div>{{ doctor.descripcion }}</div>
         </ion-card>
-    </ion-col>
+      </ion-col>
     </ion-row>
-  </ion-grid> 
+  </ion-grid>
 
 </ion-content>
