--- a/cita_doc/src/app/privado/doctores/doctores.page.html
+++ b/cita_doc/src/app/privado/doctores/doctores.page.html
@@ -6,12 +6,12 @@
 
     <ion-title class="ion-text-center">Doctores</ion-title>
 
-    <ion-buttons slot="end">
+    <!-- <ion-buttons slot="end">
       <ion-button fill="clear">
         <ion-icon name="notifications-outline"></ion-icon>
         <ion-badge>2</ion-badge>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
 
   </ion-toolbar>
 </ion-header>
