--- a/cita_doc/src/app/privado/perfil/perfil.page.html
+++ b/cita_doc/src/app/privado/perfil/perfil.page.html
@@ -7,10 +7,10 @@
     <ion-title class="ion-text-center">Perfil</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button fill="clear">
+      <!-- <ion-button fill="clear">
         <ion-icon name="notifications-outline"></ion-icon>
         <ion-badge>2</ion-badge>
-      </ion-button>
+      </ion-button> -->
 
       <ion-button  id="nested-button" fill="clear">
         <ion-icon name="ellipsis-vertical"></ion-icon>
@@ -102,7 +102,7 @@
           <p>Genero: {{paciente.genero}}</p>
         </ion-card>
         <ion-card>
-          <p>Numero contacto: {{paciente.numeroContacto}}</p>
+          <p>Número contacto: {{paciente.numeroContacto}}</p>
         </ion-card>
 
 
