--- a/cita_doc/src/app/privado/detalles/det-dpersonales/det-dpersonales.page.html
+++ b/cita_doc/src/app/privado/detalles/det-dpersonales/det-dpersonales.page.html
@@ -29,14 +29,20 @@
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>
             <ion-item>
-              <ion-input [(ngModel)]="paciente.nombre" name="nombres" type="text" placeholder="Nombres" ngModel
+              <ion-input #fName="ngModel" pattern="[a-zA-Z ]*" [(ngModel)]="paciente.nombre" name="fName" type="text" placeholder="Nombres" ngModel
                 required></ion-input>
             </ion-item>
+            <div class="form-error" *ngIf="fName.errors && (fName.dirty || fName.touched)">
+              <ion-text color="danger" *ngIf="fName.errors">Ingrese solo letras</ion-text>
+            </div>
             <br>
             <ion-item>
-              <ion-input [(ngModel)]="paciente.apellido" name="apellidos" type="text" placeholder="Apellidos" ngModel
+              <ion-input [(ngModel)]="paciente.apellido" name="fApellido" #fApellido="ngModel" pattern="[a-zA-Z ]*" type="text" placeholder="Apellidos" ngModel
                 required></ion-input>
             </ion-item>
+            <div class="form-error" *ngIf="fApellido.errors && (fApellido.dirty || fApellido.touched)">
+              <ion-text color="danger" *ngIf="fApellido.errors">Ingrese solo letras</ion-text>
+            </div>
             <br>
       
             <ion-item button="true" id="open-date-input">
@@ -56,9 +62,13 @@
         
             <br>
             <ion-item>
-              <ion-input [(ngModel)]="paciente.numeroContacto" name="contact_number" type="text"
-                placeholder="Numero de contacto" ngModel required></ion-input>
+              <ion-input  maxlength="10" minlength="10" [(ngModel)]="paciente.numeroContacto" name="contact_number" #contact_number="ngModel" pattern="[0-9]*" type="text"
+                placeholder="Número de contacto" ngModel required></ion-input>
             </ion-item>
+            <div class="form-error" *ngIf="contact_number.errors && (contact_number.dirty || contact_number.touched)">
+              <ion-text color="danger" *ngIf="contact_number.errors">Ingrese 10 dígitos numéricos</ion-text>
+             
+            </div>
             <br>
 
             <ion-item>
